commited new tasks